<resources>
    <string name="app_name">Modern Music Player</string>
    
    <!-- Auth Strings -->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="display_name">Display Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="create_account">Create Account</string>
    
    <!-- Navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_library">Library</string>
    <string name="nav_profile">Profile</string>
    
    <!-- Player Controls -->
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="favorite">Favorite</string>
    <string name="more_options">More Options</string>
    
    <!-- Player Info -->
    <string name="now_playing">Now Playing</string>
    <string name="queue">Queue</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    
    <!-- Search -->
    <string name="search_hint">Search songs, artists, albums…</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="trending">Trending</string>
    <string name="search_icon">Search</string>
    <string name="clear_search">Clear search</string>
    
    <!-- Library -->
    <string name="playlists">Playlists</string>
    <string name="favorites">Favorites</string>
    <string name="recently_played">Recently Played</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    
    <!-- Profile -->
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    
    <!-- Messages -->
    <string name="loading">Loading…</string>
    <string name="error_occurred">An error occurred</string>
    <string name="no_songs_found">No songs found</string>
    <string name="sign_in_required">Please sign in to continue</string>
</resources>
