<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.modernmusicplayer.app.ui.home.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.modernmusicplayer.app.ui.search.SearchFragment"
        android:label="@string/nav_search" />

    <fragment
        android:id="@+id/nav_playlists"
        android:name="com.modernmusicplayer.app.ui.playlists.PlaylistsFragment"
        android:label="Playlists" />

    <fragment
        android:id="@+id/nav_library"
        android:name="com.modernmusicplayer.app.ui.library.LibraryFragment"
        android:label="@string/nav_library" >
        <action
            android:id="@+id/action_library_to_playlist_detail"
            app:destination="@id/nav_playlist_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_playlist_detail"
        android:name="com.modernmusicplayer.app.ui.playlist.PlaylistDetailFragment"
        android:label="Playlist" >
        <argument
            android:name="playlistId"
            app:argType="string" />
        <argument
            android:name="playlistName"
            app:argType="string" />
        <argument
            android:name="playlistDescription"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="" />
    </fragment>

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.modernmusicplayer.app.ui.favorites.FavoritesFragment"
        android:label="Favorites" />

    <fragment
        android:id="@+id/nav_recent"
        android:name="com.modernmusicplayer.app.ui.recent.RecentlyPlayedFragment"
        android:label="Recently Played" />

    <dialog
        android:id="@+id/player_dialog"
        android:name="com.modernmusicplayer.app.ui.player.PlayerFragment"
        android:label="@string/now_playing" />

</navigation>
